Update hw6.md